[tool.poetry]
name = "sccmhunter"
version = "0.1.0"
description = ""
authors = [""]
readme = ""

[tool.poetry.dependencies]
python = "^3.11"
cmd2 = "2.4.3"
cryptography = "3.4.8"
impacket = "0.10.0"
ldap3 = "2.9.1"
pandas = "1.3.5"
pyasn1 = "0.4.8"
pyasn1-modules = "0.3.0"
requests = "2.28.1"
requests-ntlm = "1.1.0"
requests-toolbelt = "0.9.1"
rich = "13.3.5"
tabulate = "0.8.9"
typer = "0.9.0"
urllib3 = "1.26.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
